--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -23,32 +23,32 @@
                     
                     <span class="nav-item">Home</span>
                 </a> </li>
-                <li><a href="">
-                    <i class="ams profile"></i>
+                <li><a href="" class="menu">
+                    <img src="photos\tenant.png" alt=""> <i class="ams profile"></i>
                     <span class="nav-item">Tenant's Profile</span>
                 </a> </li>
-                <li><a href="">
-                    <i class="ams room"></i>
+                <li><a href="" class="menu">
+                    <img src="photos\room.png" alt=""> <i class="ams room"></i>
                     <span class="nav-item">Room Management</span>
                 </a> </li>
-                <li><a href="">
-                    <i class="ams bills"></i>
+                <li><a href="" class="menu">
+                    <img src="photos\bill.png" alt=""> <i class="ams bills"></i>
                     <span class="nav-item">Utility Bills</span>
                 </a> </li>
-                <li><a href="">
-                    <i class="ams board"></i>
+                <li><a href="" class="menu">
+                    <img src="photos\notice.png" alt=""> <i class="ams board"></i>
                     <span class="nav-item">Notice Board</span>
                 </a> </li>
-                <li><a href="">
-                    <i class="ams invoice"></i>
+                <li><a href="" class="menu">
+                    <img src="photos\invoice.png" alt=""> <i class="ams invoice"></i>
                     <span class="nav-item">Invoice</span>
                 </a> </li>
-                <li><a href="">
-                    <i class="ams history"></i>
+                <li><a href="" class="menu">
+                    <img src="" alt=""> <i class="ams history"></i>
                     <span class="nav-item">Payment History</span>
                 </a> </li>
-                <li><a href="" class="logout">
-                    <i class="ams logout"></i>
+                <li><a href="" class="menu logout">
+                    <img src="photos\logout.png" alt=""> <i class="ams logout"></i>
                     <span class="nav-item">Logout</span>
                 </a> </li>
             </ul>
