--- a/paymentHistory.html
+++ b/paymentHistory.html
@@ -6,7 +6,7 @@
     <body>
         <header>
             <h3>
-                Apartment Management System
+                Payment History
             </h3>
         </header>
 
@@ -54,6 +54,6 @@
             </ul>
         </nav>
 
-        <h2> Dashboard </h2>
+        <h2></h2>
     </body>
 </html>
