--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class = "form">
             <label for="show" class="close" title="close">&times;</label>
             <h4>Login</h4>
-            <form action="#">
+            <form method = "POST" action="#">
                 <label>Username</label>
-                <input type="text">
+                <input type="text" name = "username">
                 <label>Password</label>
-                <input type="password">
+                <input type="password" name = "password">
                 <a href="#">Forgot Password?</a>
                 <button type="button" onclick="location.href='adminDashboard.html'">Login</button>
             </form>
