--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -59,5 +59,10 @@
         </nav>
 
         <h2> Dashboard </h2>
+        <div class="flex-container">
+            <div>No. of Tenants </div>
+            <div>No. of Rooms</div>
+            <div>No. of Beds</div>  
+          </div>
     </body>
 </html>
