--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -6,11 +6,7 @@
     <body>
         <header>
             <h3>
-<<<<<<< HEAD
-                Apartment Management Systemmm12
-=======
                 Apartment Management System
->>>>>>> 958eb6304c2bb8bd3504ccce7412bf8e2269ab34
             </h3>
         </header>
 
@@ -60,9 +56,9 @@
 
         <h2> Dashboard </h2>
         <div class="flex-container">
-            <div>No. of Tenants </div>
-            <div>No. of Rooms</div>
-            <div>No. of Beds</div>  
+            <img src="photos\tenants.png" alt="tenant"> <div class = "tenant">No. of Tenants </div>
+            <img src="photos\room.png" alt="room"> <div class = "roomNo">No. of Rooms</div>
+            <img src="photos\beds.png" alt="beds"> <div class = "bed">No. of Beds</div>  
           </div>
     </body>
 </html>
