--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -6,7 +6,7 @@
     <body>
         <header>
             <h3>
-                Apartment Management Systemmm1
+                Apartment Management System
             </h3>
         </header>
 
@@ -44,7 +44,7 @@
                     <span class="nav-item">Invoice</span>
                 </a> </li>
                 <li><a href="paymentHistory.html" class="menu">
-                    <img src="" alt=""> <i class="ams history"></i>
+                    <img src="photos\history.png" alt=""> <i class="ams history"></i>
                     <span class="nav-item">Payment History</span>
                 </a> </li>
                 <li><a href="index.html" class="menu logout">
