--- a/tenantProfile.html
+++ b/tenantProfile.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel = "stylesheet" href = "css\aDashboard.css"/>
+        <link rel = "stylesheet" href = "css\tenantProfile.css"/>
+        <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
@@ -9,7 +11,7 @@
                 Tenant's Profile
             </h3>
         </header>
-
+    <section class="body">    
         <nav>
             <ul>
                 <li>
@@ -53,7 +55,37 @@
                 </a> </li>
             </ul>
         </nav>
-
+        
+        <section class ="section-body">
+            <h2>Tenants</h2>
+            <div class="container">
+                <button class="button button1">.Add New<i class="fa fa-user-plus"style="font-size:24px;float:left"></i></button>
+                <div class="search_wrap search_wrap_1">
+                    <div class="search_box">
+                        <input type="text" class="input" placeholder="Search....">
+                        <div class="btn btn_common">
+                            <i class="fas fa-search"></i>
+                        </div>
+                    </div>
+                </div>
+                
+                <table id="customers">
+                    <tr>
+                      <th>Name</th>
+                      <th>Contact</th>
+                      <th>Address</th>
+                      <th>   .   </th>
+                    </tr>
+                    <tr><td></td><td></td><td></td><td></td></tr>
+                    <tr><td></td><td></td><td></td><td></td></tr>
+                    <tr><td></td><td></td><td></td><td></td></tr>
+                    <tr><td></td><td></td><td></td><td></td></tr>
+                    <tr><td></td><td></td><td></td><td></td></tr>
+                    <tr><td></td><td></td><td></td><td></td></tr>
+                    <tr><td></td><td></td><td></td><td></td></tr>
+                </table>
+        </section>
+    </section>
         <h2> </h2>
     </body>
 </html>
