--- a/tenantProfile.html
+++ b/tenantProfile.html
@@ -10,7 +10,10 @@
             <h3>
                 Tenant's Profile
             </h3>
+            
+            <a> <img src="photos\header.png"> </a>
         </header>
+
     <section class="body">    
         <nav>
             <ul>
