--- a/utility.html
+++ b/utility.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel = "stylesheet" href = "css\aDashboard.css"/>
+        <link rel = "stylesheet" href = "css\utility.css"/>
+        <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
     </head>
     <body>
         <header>
             <h3>
                 Utility Bills
             </h3>
+            <a> <img src="photos\header.png"> </a>
         </header>
-
+        <section class="body">
         <nav>
             <ul>
                 <li>
@@ -53,6 +55,34 @@
                 </a> </li>
             </ul>
         </nav>
+        <section class ="section-body">
+            <h2>Bills</h2>
+            <div class="container">
+                <div class="search_wrap search_wrap_1">
+                    <div class="search_box">
+                        <input type="text" class="input" placeholder="Search....">
+                        <div class="btn btn_common">
+                            <i class="fas fa-search"></i>
+                        </div>
+                    </div>
+                </div>
+                
+                <table id="customers">
+                    <tr>
+                      <th>Bills</th>
+                      <th>Rate</th>
+                      <th>      </th>
+                    </tr>
+                    <tr><td></td><td></td><td></td></tr>
+                    <tr><td></td><td></td><td></td></tr>
+                    <tr><td></td><td></td><td></td></tr>
+                    <tr><td></td><td></td><td></td></tr>
+                    <tr><td></td><td></td><td></td></tr>
+                    <tr><td></td><td></td><td></td></tr>
+                    <tr><td></td><td></td><td></td></tr>
+                </table>
+        </section>
+    </section>
 
         <h2> </h2>
     </body>
