--- a/tenantProfileSettings.html
+++ b/tenantProfileSettings.html
@@ -1,32 +1,50 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/tenantProfileSettings.css"/>
-  </head>
-  <body>
-    <section class="body">
-      <h2>Profile Settings</h2> 
-      <div class="container rounded bg-white mt-5 mb-5">
-        <div class="row">
+    <link rel="stylesheet" href="css\tenantProfileSettings.css"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    </head >
+<body>
+    <div class="container rounded bg-white mt-0 mb-0">
+      <div class="row">
           <div class="col-md-3 border-right">
-                <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-                  <img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
-                  <br>
-                  <span class="font-weight-bold" style="margin-left: 45px;">Edogaru</span><br>
-            </div><br>
-            <div class="container">
-                <button class="button button1">Update Profile Image<i class="fa fa-user-plus"style="font-size:24px;float:left"></i></button>
-            </div>
-            <div class="p-3 py-5">
-   
+              <div class="d-flex flex-column align-items-center text-center p-2 py-3">
+                <img class="rounded-circle mt-0" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+                <div class="mt-0 text-center">
+                  <button class="btn btn-primary profile-button p-1.5 mb-2" type="button" style="font-size: 11px;">Edit Profile</button>
+                </div>
+                <span class="font-weight-bold" style="font-size: 18px;">Elmer Watapampam</span>
+                <span class="text-black-50">elmer_watapampa@gmail.com</span><span> </span>
               </div>
-
-            <section class="section-body">
-            </div>
-            <div class="flex-container">
-             
-            </section>
-          
-    </section>
-  </body>
+          </div>
+          <div class="col-md-5 border-right">
+              <div class="p-2 py-4">
+                  <div class="d-flex justify-content-between align-items-center mb-3">
+                      <h4 class="text-right" style="color:#009d63">Profile Settings</h4>
+                  </div>
+                  <div class="row mt-2">
+                      <div class="col-md-6"><label class="labels">Name</label><input type="text" class="form-control" placeholder="first name" value=""></div>
+                      <div class="col-md-6"><label class="labels">Surname</label><input type="text" class="form-control" value="" placeholder="surname"></div>
+                  </div>
+                  <div class="row mt-3">
+                      <div class="col-md-12"><label class="labels">Mobile Number</label><input type="text" class="form-control" placeholder="enter phone number" value=""></div>
+                      <div class="col-md-12"><label class="labels">Address</label><input type="text" class="form-control" placeholder="enter address" value=""></div>
+                      <div class="col-md-12"><label class="labels">Email ID</label><input type="text" class="form-control" placeholder="enter email id" value=""></div>
+                      <div class="col-md-12"><label class="labels">Occupation</label><input type="text" class="form-control" placeholder="occupation" value=""></div>
+                  </div>
+                  <div class="row mt-3">
+                      <div class="col-md-6"><label class="labels">Gender</label><input type="text" class="form-control" placeholder="gender" value=""></div>
+                      <div class="col-md-6"><label class="labels">Birthdate</label><input type="text" class="form-control" value="" placeholder="birthdate"></div>
+                  </div>
+                  <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save Profile</button></div>
+              </div>
+          </div>
+      </div>
+  </div>
+  </div>
+  </div>
+</body>
 </html>
